Attempt to use false if install-drivers is null

--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -33,7 +33,7 @@ jobs:
     uses: ./.github/workflows/check_analyzers.yml
     with:
       package-name: ${{ inputs.package-name }}
-      install-drivers: ${{ needs.get_package_info.outputs.install-drivers }}
+      install-drivers: ${{ needs.get_package_info.outputs.install-drivers || false }}
   check_docs:
     name: Check docs for ${{ inputs.package-name }}
     uses: ./.github/workflows/check_docs.yml
