--- a/packages/ni.measurements.data.v1.proto/pyproject.toml
+++ b/packages/ni.measurements.data.v1.proto/pyproject.toml
@@ -32,6 +32,9 @@ packages = [{include = "ni", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 protobuf = {version=">=4.21"}
+ni-datamonikers-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
+ni-measurements-metadata-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
+ni-protobuf-types = { version = ">=0.1.0.dev3", allow-prereleases = true }
 
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
