Add new package ni.measurements.data.v1.proto (#109)
* Generate stubs for measurements.data.v1.proto

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Commit changes to packages.json

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Add python package boilerplate

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Create new package ni.measurements.data.v1.proto

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Fix link to ni-apis protos

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Update readthedocs to the new poetry version.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Add new packages to the publish choice parameter.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Sort packages properly.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

---------

Signed-off-by: Michael Johansen <michael.johansen@ni.com>
Co-authored-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,8 @@ on:
             - ni.measuremelink.pinmap.v1.proto
             - ni.measurementlink.proto
             - ni.measurementlink.sessionmanagement.v1.proto
+            - ni.measurements.data.v1.proto
+            - ni.measurements.metadata.v1.proto
             - ni.panels.v1.proto
             - ni.protobuf.types
             - ni-grpc-extensions
