--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -29,9 +29,11 @@ jobs:
       output-format: ${{ needs.get_package_info.outputs.output-format }}
   check_analyzers:
     name: Check analyzers for ${{ inputs.package-name }}
+    needs: get_package_info
     uses: ./.github/workflows/check_analyzers.yml
     with:
       package-name: ${{ inputs.package-name }}
+      install-drivers: ${{ needs.get_package_info.outputs.install-drivers == 'true' }}
   check_docs:
     name: Check docs for ${{ inputs.package-name }}
     uses: ./.github/workflows/check_docs.yml
