--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,20 +21,14 @@ jobs:
     uses: ./.github/workflows/check_package.yml
     with:
       package-name: ${{ matrix.package-name }}
-  check_analyzers_grpc_gen:
-    name: Check analyzers for grpc_generator
-    uses: ./.github/workflows/check_analyzers.yml
-    with:
-      package-name: grpc_generator
-      package-base-path: tools
   run_unit_tests:
     name: Run unit tests
     uses: ./.github/workflows/run_unit_tests.yml
-    needs: [check_package, check_analyzers_grpc_gen]
+    needs: check_package
   report_test_results:
     name: Report test results
     uses: ./.github/workflows/report_test_results.yml
-    needs: [run_unit_tests]
+    needs: run_unit_tests
     if: always()
     permissions:
       contents: read
