--- a/.github/workflows/get_package_info.yml
+++ b/.github/workflows/get_package_info.yml
@@ -9,6 +9,9 @@ on:
         required: true
         type: string
     outputs:
+      package-basepath:
+        description: 'The parent directory of the package.'
+        value: ${{ jobs.get_package_info.outputs.package-basepath }}
       proto-basepath:
         description: 'Base path for proto files.'
         value: ${{ jobs.get_package_info.outputs.proto-basepath }}
@@ -48,6 +51,7 @@ jobs:
             exit 1
           fi
           echo "Package info: $info"
+          echo "package-basepath=$(echo $info | jq -r '."package-basepath"')" >> $GITHUB_OUTPUT
           echo "proto-basepath=$(echo $info | jq -r '."proto-basepath"')" >> $GITHUB_OUTPUT
           echo "proto-subpath=$(echo $info | jq -r '."proto-subpath"')" >> $GITHUB_OUTPUT
           echo "proto-include-path=$(echo $info | jq -r '."proto-include-path"')" >> $GITHUB_OUTPUT
