--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -36,8 +36,8 @@ jobs:
       package-base-path: ${{ needs.get_package_info.outputs.package-basepath }}
       install-drivers: ${{ needs.get_package_info.outputs.install-drivers == 'true' }}
   check_docs:
-    if: ${{ always() && hashFiles(format('{0}/{1}/docs/conf.py', needs.get_package_info.outputs.package-basepath, inputs.package-name)) != '' }}
     name: Check docs for ${{ inputs.package-name }}
     uses: ./.github/workflows/check_docs.yml
     with:
       package-name: ${{ inputs.package-name }}
+      package-basepath: ${{ needs.get_package_info.outputs.package-basepath }}
