--- a/.github/workflows/check_docs.yml
+++ b/.github/workflows/check_docs.yml
@@ -16,7 +16,6 @@ on:
 
 jobs:
   check_docs:
-    if: ${{ always() && hashFiles(format('{0}/{1}/docs/conf.py', inputs.package-basepath, inputs.package-name)) != '' }}
     name: Check docs for ${{ inputs.package-name }}
     runs-on: ubuntu-latest
     defaults:
@@ -25,24 +24,32 @@ jobs:
         working-directory: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}
     steps:
       - name: Check out repo
+        if: ${{ hashFiles(format('{0}/{1}/docs/conf.py', inputs.package-basepath, inputs.package-name)) != '' }}
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - name: Set up Python
+        if: ${{ hashFiles(format('{0}/{1}/docs/conf.py', inputs.package-basepath, inputs.package-name)) != '' }}
         uses: ni/python-actions/setup-python@f0276f7f58868ec0d0d1a86377287c9e6fe0c6e7 # v0.5.0
         id: setup-python
       - name: Set up Poetry
+        if: ${{ hashFiles(format('{0}/{1}/docs/conf.py', inputs.package-basepath, inputs.package-name)) != '' }}
         uses: ni/python-actions/setup-poetry@f0276f7f58868ec0d0d1a86377287c9e6fe0c6e7 # v0.5.0
       - name: Check for lock changes
+        if: ${{ hashFiles(format('{0}/{1}/docs/conf.py', inputs.package-basepath, inputs.package-name)) != '' }}
         run: poetry check --lock
       - name: Cache virtualenv (with docs)
+        if: ${{ hashFiles(format('{0}/{1}/docs/conf.py', inputs.package-basepath, inputs.package-name)) != '' }}
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
         with:
           path: .venv
           key: ${{ inputs.package-name }}-with-docs-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles(format('{0}/{1}/poetry.lock', inputs.package-basepath, inputs.package-name)) }}
       - name: Install nitypes (with docs)
+        if: ${{ hashFiles(format('{0}/{1}/docs/conf.py', inputs.package-basepath, inputs.package-name)) != '' }}
         run: poetry install -v --only main,docs
       - name: Generate docs
+        if: ${{ hashFiles(format('{0}/{1}/docs/conf.py', inputs.package-basepath, inputs.package-name)) != '' }}
         run:  poetry run sphinx-build docs docs/_build -b html -W
       - name: Upload docs artifact
+        if: ${{ hashFiles(format('{0}/{1}/docs/conf.py', inputs.package-basepath, inputs.package-name)) != '' }}
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
           name: ${{ inputs.package-name }}-docs
