Add package-basepath to outputs
Signed-off-by: Joe Friedrichsen <114173023+jfriedri-ni@users.noreply.github.com>

--- a/.github/workflows/get_package_info.yml
+++ b/.github/workflows/get_package_info.yml
@@ -33,6 +33,7 @@ jobs:
     name: Get package info for ${{ inputs.package-name }}
     runs-on: ubuntu-latest
     outputs:
+      package-basepath: ${{ steps.parse_json.outputs.package-basepath }}
       proto-basepath: ${{ steps.parse_json.outputs.proto-basepath }}
       proto-subpath: ${{ steps.parse_json.outputs.proto-subpath }}
       proto-include-path: ${{ steps.parse_json.outputs.proto-include-path }}
