Dumping the environment does not show the results
Signed-off-by: Joe Friedrichsen <114173023+jfriedri-ni@users.noreply.github.com>

--- a/.github/workflows/get_package_info.yml
+++ b/.github/workflows/get_package_info.yml
@@ -73,8 +73,6 @@ jobs:
           echo "should-check-codegen=true" >> $GITHUB_OUTPUT
           echo "should-check-docs=true" >> $GITHUB_OUTPUT
           echo "should-run-tests=true" >> $GITHUB_OUTPUT
-          echo "Result:"
-          env
-      - name: Show results
+      - name: Show package info
         run: |
           echo "${{ toJSON(steps.parse_json.outputs) }}"
