--- a/.github/workflows/get_package_info.yml
+++ b/.github/workflows/get_package_info.yml
@@ -85,6 +85,7 @@ jobs:
 
           should_run_tests=false
           if [ -d "${GITHUB_WORKSPACE}/${package_basepath}/${{ inputs.package-name }}/tests" ]
+          then
             should_run_tests=true
           fi
 
