Debug proto_subpath
Signed-off-by: Joe Friedrichsen <114173023+jfriedri-ni@users.noreply.github.com>

--- a/.github/workflows/get_package_info.yml
+++ b/.github/workflows/get_package_info.yml
@@ -74,6 +74,7 @@ jobs:
           should_check_codegen=false
           if [ -n ${proto_subpath} ]
           then
+            echo proto_subpath == ."${proto_subpath}".
             should_check_codegen=true
           fi
 
