--- a/.github/workflows/get_package_info.yml
+++ b/.github/workflows/get_package_info.yml
@@ -72,9 +72,8 @@ jobs:
           install_drivers=$(echo $info | jq -r '."install-drivers"')
 
           should_check_codegen=false
-          if [ -n ${proto_subpath} ]
+          if [ -n "${proto_subpath}" ]
           then
-            echo proto_subpath == ."${proto_subpath}".
             should_check_codegen=true
           fi
 
