--- a/.github/workflows/get_package_info.yml
+++ b/.github/workflows/get_package_info.yml
@@ -71,9 +71,8 @@ jobs:
           output_format=$(echo $info | jq -r '."output-format"')
           install_drivers=$(echo $info | jq -r '."install-drivers"')
 
-          echo "proto_subpath is .{$proto_subpath}."
           should_check_codegen=false
-          if [ -n "${proto_subpath}" -o "${proto_subpath}" != "null" ]
+          if [ -n "${proto_subpath}" -o "${proto_subpath}" != "{null}" ]
           then
             should_check_codegen=true
           fi
