--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -16,7 +16,7 @@ jobs:
     with:
       package-name: ${{ inputs.package-name }}
   check_codegen:
-    if: ${{ needs.get_package_info.outputs.proto-subpath != '' }}
+    if: ${{ needs.get_package_info.outputs.should-check-codegen }}
     name: Check codegen for ${{ inputs.package-name }}
     needs: get_package_info
     uses: ./.github/workflows/check_codegen.yml
@@ -36,7 +36,9 @@ jobs:
       package-base-path: ${{ needs.get_package_info.outputs.package-basepath }}
       install-drivers: ${{ needs.get_package_info.outputs.install-drivers == 'true' }}
   check_docs:
+    if: ${{ needs.get_package_info.outputs.should-check-docs }}
     name: Check docs for ${{ inputs.package-name }}
+    needs: get_package_info
     uses: ./.github/workflows/check_docs.yml
     with:
       package-name: ${{ inputs.package-name }}
