Let's try a GH emoji
Signed-off-by: Joe Friedrichsen <114173023+jfriedri-ni@users.noreply.github.com>

--- a/.github/workflows/get_package_info.yml
+++ b/.github/workflows/get_package_info.yml
@@ -98,6 +98,6 @@ jobs:
           echo "should-check-codegen=${should_check_codegen}" >> $GITHUB_OUTPUT
           echo "should-check-docs=${should_check_docs}" >> $GITHUB_OUTPUT
           echo "should-run-tests=${should_run_tests}" >> $GITHUB_OUTPUT
-      - name: Show package info
+      - name: :eyes: Show package info
         run: |
           echo "${{ toJSON(steps.parse_json.outputs) }}"
