--- a/.github/workflows/check_analyzers.yml
+++ b/.github/workflows/check_analyzers.yml
@@ -8,7 +8,7 @@ on:
         default: ''
         required: true
         type: string
-      package-base-path:
+      package-basepath:
         description: 'The parent directory of the package to check. Defaults to packages.'
         default: 'packages'
         required: false
@@ -26,7 +26,7 @@ jobs:
     defaults:
       run:
         # Set the working-directory for all steps in this job.
-        working-directory: ./${{ inputs.package-base-path }}/${{ inputs.package-name }}
+        working-directory: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}
     steps:
       - name: Check out repo
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
@@ -42,8 +42,8 @@ jobs:
       - name: Cache virtualenv
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
         with:
-          path: ${{ inputs.package-base-path }}/${{ inputs.package-name }}/.venv
-          key: ${{ inputs.package-name }}-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles(format('{0}/{1}/poetry.lock', inputs.package-base-path, inputs.package-name)) }}
+          path: ${{ inputs.package-basepath }}/${{ inputs.package-name }}/.venv
+          key: ${{ inputs.package-name }}-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles(format('{0}/{1}/poetry.lock', inputs.package-basepath, inputs.package-name)) }}
       - name: Install ${{ inputs.package-name }}
         run: |
           if [ "${{ inputs.install-drivers }}" = "true" ]; then
@@ -66,10 +66,10 @@ jobs:
         with:
           python-platform: Linux
           version: PATH
-          working-directory: ./${{ inputs.package-base-path }}/${{ inputs.package-name }}
+          working-directory: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}
       - name: Pyright static analysis (Windows)
         uses: jakebailey/pyright-action@b5d50e5cde6547546a5c4ac92e416a8c2c1a1dfe # v2.3.2
         with:
           python-platform: Windows
           version: PATH
-          working-directory: ./${{ inputs.package-base-path }}/${{ inputs.package-name }}
+          working-directory: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}
