--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -16,7 +16,7 @@ jobs:
     with:
       package-name: ${{ inputs.package-name }}
   check_codegen:
-    if: ${{ needs.get_package_info.outputs.proto-subpath != '' }}
+    if: ${{ needs.get_package_info.outputs.should-check-codegen == 'true' }}
     name: Check codegen for ${{ inputs.package-name }}
     needs: get_package_info
     uses: ./.github/workflows/check_codegen.yml
@@ -25,7 +25,7 @@ jobs:
       proto-basepath: ${{ needs.get_package_info.outputs.proto-basepath }}
       proto-subpath: ${{ needs.get_package_info.outputs.proto-subpath }}
       proto-include-path: ${{ needs.get_package_info.outputs.proto-include-path }}
-      output-basepath: ./packages/${{ inputs.package-name }}/src
+      output-basepath: ./${{ needs.get_package_info.outputs.package-basepath }}/${{ inputs.package-name }}/src
       output-format: ${{ needs.get_package_info.outputs.output-format }}
   check_analyzers:
     name: Check analyzers for ${{ inputs.package-name }}
@@ -33,9 +33,13 @@ jobs:
     uses: ./.github/workflows/check_analyzers.yml
     with:
       package-name: ${{ inputs.package-name }}
+      package-basepath: ${{ needs.get_package_info.outputs.package-basepath }}
       install-drivers: ${{ needs.get_package_info.outputs.install-drivers == 'true' }}
   check_docs:
+    if: ${{ needs.get_package_info.outputs.should-check-docs == 'true' }}
     name: Check docs for ${{ inputs.package-name }}
+    needs: get_package_info
     uses: ./.github/workflows/check_docs.yml
     with:
       package-name: ${{ inputs.package-name }}
+      package-basepath: ${{ needs.get_package_info.outputs.package-basepath }}
