Activate ni.measurementlink.pinmap.v1.client tests

--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -51,6 +51,10 @@ jobs:
         uses: ./.github/actions/run_and_upload_unit_tests
         with:
           package-name: ni.measurementlink.discovery.v1.client
+      - name: Run and upload unit tests - ni.measurementlink.pinmap.v1.client
+        uses: ./.github/actions/run_and_upload_unit_tests
+        with:
+          package-name: ni.measurementlink.pinmap.v1.client
       # Run grpc_generator unit tests on its oldest supported version.
       - name: Run and upload unit tests - grpc_generator
         if: ${{ !contains(fromJSON('["3.9", "3.10"]'), matrix.python-version) }}
