--- a/.github/actions/run_and_upload_unit_tests/action.yml
+++ b/.github/actions/run_and_upload_unit_tests/action.yml
@@ -18,11 +18,11 @@ runs:
         key: ${{ inputs.package-name }}-${{ runner.os }}-py${{ env.pythonVersion }}-${{ hashFiles(format('{0}/{1}/poetry.lock', inputs.package-basepath, inputs.package-name)) }}
     - name: Install ${{ inputs.package-name }}
       run: poetry install -v
-      working-directory: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}
+      working-directory: ${{ github.workspace }}/${{ inputs.package-basepath }}/${{ inputs.package-name }}
       shell: bash
     - name: Run ${{ inputs.package-name }} unit tests and code coverage
       run: poetry run pytest ./tests/unit -v --cov=${{ inputs.package-name }} --junitxml=test_results/${{ inputs.package-name }}-${{ matrix.os }}-py${{ matrix.python-version }}.xml
-      working-directory: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}
+      working-directory: ${{ github.workspace }}/${{ inputs.package-basepath }}/${{ inputs.package-name }}
       shell: bash
     - name: Upload ${{ inputs.package-name }} test results
       uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
