--- a/.github/workflows/check_docs.yml
+++ b/.github/workflows/check_docs.yml
@@ -21,7 +21,7 @@ jobs:
     defaults:
       run:
         # Set the working-directory for all steps in this job.
-        working-directory: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}
+        working-directory: ${{ github.workspace }}/${{ inputs.package-basepath }}/${{ inputs.package-name }}
     steps:
       - name: Check out repo
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
