--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -22,10 +22,10 @@ jobs:
     uses: ./.github/workflows/check_codegen.yml
     with:
       package-name: ${{ inputs.package-name }}
-      proto-basepath: ${{ needs.get_package_info.outputs.proto-basepath }}
+      proto-basepath: ${{ github.workspace }}/${{ needs.get_package_info.outputs.proto-basepath }}
       proto-subpath: ${{ needs.get_package_info.outputs.proto-subpath }}
-      proto-include-path: ${{ needs.get_package_info.outputs.proto-include-path }}
-      output-basepath: ./${{ needs.get_package_info.outputs.package-basepath }}/${{ inputs.package-name }}/src
+      proto-include-path: ${{ github.workspace }}/${{ needs.get_package_info.outputs.proto-include-path }}
+      output-basepath: ${{ github.workspace }}/${{ needs.get_package_info.outputs.package-basepath }}/${{ inputs.package-name }}/src
       output-format: ${{ needs.get_package_info.outputs.output-format }}
   check_analyzers:
     name: Check analyzers for ${{ inputs.package-name }}
@@ -33,7 +33,7 @@ jobs:
     uses: ./.github/workflows/check_analyzers.yml
     with:
       package-name: ${{ inputs.package-name }}
-      package-basepath: ${{ needs.get_package_info.outputs.package-basepath }}
+      package-basepath: ${{ github.workspace }}/${{ needs.get_package_info.outputs.package-basepath }}
       install-drivers: ${{ needs.get_package_info.outputs.install-drivers == 'true' }}
   check_docs:
     if: ${{ needs.get_package_info.outputs.should-check-docs == 'true' }}
@@ -42,4 +42,4 @@ jobs:
     uses: ./.github/workflows/check_docs.yml
     with:
       package-name: ${{ inputs.package-name }}
-      package-basepath: ${{ needs.get_package_info.outputs.package-basepath }}
+      package-basepath: ${{ github.workspace }}/${{ needs.get_package_info.outputs.package-basepath }}
