--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -61,4 +61,4 @@ jobs:
         uses: ./.github/actions/run_and_upload_unit_tests
         with:
           package-name: grpc_generator
-          package-basepath: tools
+          package-basepath: ${{ github.workspace }}/tools
