--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -126,7 +126,7 @@ jobs:
         name: ${{ needs.get_package_info.outputs.package-name }}-distribution-packages
         path: ./packages/${{ needs.get_package_info.outputs.package-name }}/dist/
     - run: ls -lR
-      working-directory: ${{ github.workspace }}//packages/${{ needs.get_package_info.outputs.package-name }}
+      working-directory: ${{ github.workspace }}/packages/${{ needs.get_package_info.outputs.package-name }}
     - name: Upload to ${{ env.environment }}
       uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
       with:
