--- a/.github/workflows/check_analyzers.yml
+++ b/.github/workflows/check_analyzers.yml
@@ -10,8 +10,8 @@ on:
         type: string
       package-basepath:
         description: 'The parent directory of the package to check. Defaults to packages.'
-        default: 'packages'
-        required: false
+        default: ''
+        required: true
         type: string
       install-drivers:
         description: 'Whether to install drivers extras'
@@ -42,7 +42,7 @@ jobs:
       - name: Cache virtualenv
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
         with:
-          path: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}/.venv
+          path: .venv
           key: ${{ inputs.package-name }}-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles(format('{0}/{1}/poetry.lock', inputs.package-basepath, inputs.package-name)) }}
       - name: Install ${{ inputs.package-name }}
         run: |
