--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -33,7 +33,7 @@ jobs:
     uses: ./.github/workflows/check_analyzers.yml
     with:
       package-name: ${{ inputs.package-name }}
-      package-basepath: ${{ github.workspace }}/${{ needs.get_package_info.outputs.package-basepath }}
+      package-basepath: ./${{ needs.get_package_info.outputs.package-basepath }}
       install-drivers: ${{ needs.get_package_info.outputs.install-drivers == 'true' }}
   check_docs:
     if: ${{ needs.get_package_info.outputs.should-check-docs == 'true' }}
@@ -42,4 +42,4 @@ jobs:
     uses: ./.github/workflows/check_docs.yml
     with:
       package-name: ${{ inputs.package-name }}
-      package-basepath: ${{ github.workspace }}/${{ needs.get_package_info.outputs.package-basepath }}
+      package-basepath: ./${{ needs.get_package_info.outputs.package-basepath }}
