--- a/.github/workflows/check_docs.yml
+++ b/.github/workflows/check_docs.yml
@@ -45,4 +45,4 @@ jobs:
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
           name: ${{ inputs.package-name }}-docs
-          path: ${{ github.workspace }}/${{ inputs.package-basepath }}/${{ inputs.package-name }}/docs/_build/
+          path: docs/_build/
