--- a/.github/workflows/check_codegen.yml
+++ b/.github/workflows/check_codegen.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Cache virtualenv
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
         with:
-          path: .venv
+          path: ${{ github.workspace }}/tools/grpc_generator/.venv
           key: grpc_generator-only-main-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('tools/grpc_generator/poetry.lock') }}
       - name: Install grpc_generator
         run: poetry install -v --only main
