--- a/.github/workflows/check_docs.yml
+++ b/.github/workflows/check_docs.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Cache virtualenv (with docs)
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
         with:
-          path: .venv
+          path: ${{ github.workspace }}/${{ inputs.package-basepath }}/${{ inputs.package-name }}/.venv
           key: ${{ inputs.package-name }}-with-docs-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles(format('{0}/{1}/poetry.lock', inputs.package-basepath, inputs.package-name)) }}
       - name: Install nitypes (with docs)
         run: poetry install -v --only main,docs
