--- a/.github/workflows/check_codegen.yml
+++ b/.github/workflows/check_codegen.yml
@@ -4,25 +4,25 @@ on:
   workflow_call:
     inputs:
       package-name:
-        description: 'The name of the package to check.'
+        description: 'The name of the package folder to check.'
         default: ''
         required: true
         type: string
       proto-basepath:
-        description: 'The base path for proto files used for generation.'
-        default: './third_party/ni-apis'
+        description: 'The base path to the proto files used for generation.'
+        default: 'third_party/ni-apis'
         type: string
       proto-subpath:
-        description: 'The path to proto files relative to proto-base-path.'
+        description: 'The specific subpath to the proto files needed for generation, relative to the proto-basepath.'
         default: ''
         required: true
         type: string
       proto-include-path:
-        description: 'Additional path to include in the proto generation.'
-        default: './third_party/ni-apis'
+        description: 'Additional path to include during proto generation.'
+        default: 'third_party/ni-apis'
         type: string
       output-basepath:
-        description: 'The base output path for codegened files.'
+        description: 'The base output path for the generated files.'
         default: ''
         required: true
         type: string
