--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       package-name:
-        description: 'The name of the package to check.'
+        description: 'The name of the package folder to check.'
         default: ''
         required: true
         type: string
