--- a/.github/workflows/get_package_info.yml
+++ b/.github/workflows/get_package_info.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       package-name:
-        description: 'The name of the package to check.'
+        description: 'The name of the package from packages.json.'
         default: ''
         required: true
         type: string
