--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -22,10 +22,10 @@ jobs:
     uses: ./.github/workflows/check_codegen.yml
     with:
       package-name: ${{ inputs.package-name }}
-      proto-basepath: ${{ github.workspace }}/${{ needs.get_package_info.outputs.proto-basepath }}
+      proto-basepath: ${{ needs.get_package_info.outputs.proto-basepath }}
       proto-subpath: ${{ needs.get_package_info.outputs.proto-subpath }}
-      proto-include-path: ${{ github.workspace }}/${{ needs.get_package_info.outputs.proto-include-path }}
-      output-basepath: ${{ github.workspace }}/${{ needs.get_package_info.outputs.package-basepath }}/${{ inputs.package-name }}/src
+      proto-include-path: ${{ needs.get_package_info.outputs.proto-include-path }}
+      output-basepath: ${{ needs.get_package_info.outputs.package-basepath }}/${{ inputs.package-name }}/src
       output-format: ${{ needs.get_package_info.outputs.output-format }}
   check_analyzers:
     name: Check analyzers for ${{ inputs.package-name }}
