--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -34,7 +34,7 @@ jobs:
     with:
       package-name: ${{ inputs.package-name }}
       package-basepath: ${{ needs.get_package_info.outputs.package-basepath }}
-      install-drivers: ${{ needs.get_package_info.outputs.install-drivers == 'true' }}
+      install-extras: ${{ needs.get_package_info.outputs.install-extras }}
   check_docs:
     if: ${{ needs.get_package_info.outputs.should-check-docs == 'true' }}
     name: Check docs for ${{ inputs.package-name }}
