--- a/packages/ni.measurementlink.discovery.v1.client/pyproject.toml
+++ b/packages/ni.measurementlink.discovery.v1.client/pyproject.toml
@@ -35,7 +35,7 @@ repository = "https://github.com/ni/ni-apis-python"
 
 [tool.poetry]
 packages = [{include = "ni", from = "src"}]
-requires-poetry = '>=2.0,<3.0'
+requires-poetry = '>=2.1,<3.0'
 
 [tool.poetry.dependencies]
 grpcio = {version=">=1.49.0,<2.0"}
@@ -75,7 +75,7 @@ m2r2 = ">=0.3.2"
 toml = ">=0.10.2"
 
 [build-system]
-requires = ["poetry-core>=1.8"]
+requires = ["poetry-core>=2.1.0,<3.0"]
 build-backend = "poetry.core.masonry.api"
 
 
